# veda-black-marble

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  build.sh  env.yml  maap_dps_algorithm_config.yml  package-lock.json  pyproject.toml  run.sh
blackmarble/: __init__.py  cli.py  config.py  crs.py  logging_utils.py  pipeline.py  typing.py
blackmarble-stubs/pyproj/: __init__.pyi  crs.pyi  transformer.pyi
blackmarble-stubs/rasterio/: __init__.pyi  crs.pyi  enums.pyi  features.pyi  io.pyi  mask.pyi  transform.pyi  warp.pyi  windows.pyi
blackmarble/acquire/: __init__.py  landsat.py  osm.py  osm_fractional.py  viirs.py  wrs_utils.py
blackmarble/analyze/: __init__.py  indices.py  streaming.py  temporal.py  urban_fields.py
blackmarble/enhance/: __init__.py  contrast.py  visualize.py
blackmarble/export/: __init__.py  cog.py  metadata.py  validate.py
blackmarble/prepare/: __init__.py  diagnostic.py  landsat.py  landsat_qa.py  spatial.py  window_utils.py
docs/: RELEASE_NOTES.md
docs/pipeline-steps/: README.md  landsat-qa-masking.md  landsat-search.md  ndui-calculation.md  spatial-alignment.md  spectral-indices.md  statistics-calculation.md  temporal-compositing.md  urban-field-enhancement.md  viirs-preprocessing.md
tests/: conftest.py  pyrightconfig.json  test_streaming.py  test_urban_fields.py
tests/acquire/: test_viirs_orientation.py
tests/analyze/: test_index_calculation_order.py
tests/integration/: test_sync_pipeline.py
tests/pipeline/: __init__.py  test_statistics.py
tests/prepare/: test_spatial.py
