[project]
name = "blackmarble"
description = "Black Marble NDUI processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38",
    "earthaccess>=0.16.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2",
    "obstore>=0.8.2",
    "osmnx>=2.0.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.3",
    "scipy>=1.15.3",
    "shapely>=2.1.0",
    "tqdm>=4.67.1",
    "typer>=0.15.3",
]
dynamic = ["version"]

[project.scripts]
blackmarble = "blackmarble.cli:app"

[build-system]
requires = ["hatchling>=1.24.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
artifacts = [
  "blackmarble/data/WRS2_descending/*",
]

[tool.hatch.build.targets.wheel]
packages = ["blackmarble"]
only-packages = false

[tool.hatch.build.targets.sdist]
include = [
  "blackmarble/**",
]

# ───────────────────────────────────────────────────────────────
# Dev / test extras
# ───────────────────────────────────────────────────────────────
[dependency-groups]
dev = [
  "basedpyright>=1.38.2",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "ruff>=0.15.0",
  "scipy-stubs>=1.15.3",
  "types-geopandas>=1.1.1",
  "types-networkx>=3.6.1.20251220",
  "types-shapely>=2.1.0.20250917",
  "vulture==2.14",
]

[tool.pytest.ini_options]
addopts = "-raqs"
testpaths = ["tests"]
markers = [
    "edgecase: mark test as testing mathematical or algorithmic edge cases with synthetic data",
    "integration: mark test as integration test requiring real data downloads (skip by default)",
]

[tool.basedpyright]
# Docker utility files may have dependencies not available during type checking
exclude = ["docker/"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
stubPath = "blackmarble-stubs"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"  # We have our own stubs
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "error"

# ───────────────────────────────────────────────────────────────
# Code Quality Tools Configuration
# ───────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".pytest_cache",
    ".metrics",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.vulture]
min_confidence = 80
sort_by_size = true
exclude = ["tests/*", "notebooks/*", "scripts/*", "docker/*"]
